disable styles for emotions

--- a/src/css/theme-styles.css
+++ b/src/css/theme-styles.css
@@ -116,7 +116,11 @@ display: flex;
 	background: #E3492B;
 	border-radius:50%;
 }
-	
+	[emotions-nav].voted {
+		pointer-events: none;
+		background-color: grey;
+	}
+
 	[emotions-nav].smile {
 		
 	}
